# python-openmotics

./: .isort.cfg  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  README.md  mypi.ini  package-lock.json  package.json  pylintrc.old  pyproject.toml  requirements.txt  requirements.txt.old  requirements_dev.txt.old  setup.py  setup.py.old
.github/workflows/: ci.yml
docs/: conf.py  index.rst
pyopenmotics/: __init__.py  client.py  const.py  exceptions.py  openmotics.py  util.py  ws.py
pyopenmotics/base/: __init__.py
pyopenmotics/base/installations/: __init__.py  groupactions.py  inputs.py  lights.py  outputs.py  sensors.py  shutters.py
src/pyopenmotics/: __init__.py  client.py  const.py  exceptions.py  openmotics.py  pyproject.toml  util.py  websocket.py
src/pyopenmotics/base/: __init__.py
src/pyopenmotics/base/installations/: __init__.py  groupactions.py  inputs.py  lights.py  outputs.py  sensors.py  shutters.py
tests/: test_openmotics.py
