[tool.poetry]
name = "pyopenmotics"
version = "0.0.1"
description = "Asynchronous Python client for Openmotics."
authors = ["Wouter Coppens <wouter.coppens@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/woutercoppens/python-openmotics"
repository = "hhttps://github.com/woutercoppens/python-openmotics"
documentation = "https://github.com/woutercoppens/python-openmotics"
keywords = ["openmotics", "api", "async", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
Authlib = ">=0.15.5"
backoff = ">=1.11.1"
cached_property = ">=1.5.2"
oauthlib = ">=3.1.1"
yarl = ">=1.7.2"
cryptography = "3.3.2"

[tool.poetry.dev-dependencies]
aresponses = "^2.1.4"
black = "^21.10b0"
blacken-docs = "^1.11.0"
coverage = {version = "^6.1.2", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.0.1"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
yamllint = "^1.26.3"
pyupgrade = "^2.29.1"
flake8-simplify = "^0.14.2"
vulture = "^2.3"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-eradicate = "^1.2.0"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^1.10.3"
codespell = "^2.1.0"
bandit = "^1.7.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/woutercoppens/python-openmotics/issues"
Changelog = "https://github.com/woutercoppens/python-openmotics/releases"

[tool.black]
target-version = ['py39']

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["pyopenmotics"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MASTER]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.empty_comment",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.typing",
]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
    "wv",
]

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "too-few-public-methods",
    "duplicate-code",
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pylint.DESIGN]
max-attributes=20

[tool.pytest.ini_options]
addopts = " --cov"

[tool.vulture]
min_confidence = 80
paths = ["pyopenmotics", "tests"]
verbose = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
